# VisScore

./: .env.example  .gitignore  Dockerfile  FROM_SCRATCH.md  LICENSE  README.md  _bootstrap_src.py  app.py  cnn_training.py  csv_tufte_charts.py  inference.py  main.py  multimodal_inference.py  pyproject.toml  requirements-reddit.txt  requirements-synthetic.txt  requirements.txt  run_from_scratch.sh  streamlit_csv_charts.py  synthetic_data_gen.py  synthetic_data_gen_plotly.py  vlm_judge.py
apps/streamlit_csv_charts/: app.py
apps/streamlit_viscore/: app.py
cli/: infer.py  multimodal_infer.py
generated_plots/: csv_tufte_manifest.json
input_csvs/: 02aef56b-c5b0-4da6-87a3-14bf30f5ca27_Data.csv  02aef56b-c5b0-4da6-87a3-14bf30f5ca27_Series - Metadata.csv
notebooks/: colab_generate_tufte_synthetic.ipynb
predictions/: predictions.json
predictions_multimodal/: multimodal_results.json
results/: training_config_040626.json  training_config_previous.json
results copy/: training_config.json
scraper/: image_downloader.py  reddit_scraper.py  utils.py
scripts/: generate_tufte_synthetic.py
src/viscore/: __init__.py
src/viscore/inference/: __init__.py  core.py
src/viscore/vlm/: __init__.py  judge.py
src/visscore_synthetic/: Untitled  __init__.py  __main__.py  cli.py  mpl_styles.py  pipelines.py  prompts.py  registry.py  sns_non_tufte_charts.py
vis_dataset/: metadata.json
vis_dataset_plotly/: metadata_plotly.json
visual_dataset/: metadata.json
