[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visscore-synthetic"
version = "0.1.0"
description = "Synthetic Tufte vs chartjunk chart images for CNN training (Diffusers)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
  "torch>=2.1.0",
  "diffusers>=0.32.0",
  "transformers>=4.40.0",
  "accelerate>=0.30.0",
  "safetensors>=0.4.0",
  "Pillow>=9.0.0",
]

[project.scripts]
visscore-generate = "visscore_synthetic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
