[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visscore-synthetic"
version = "0.2.0"
description = "Programmatic synthetic Tufte vs chartjunk chart images for CNN training (matplotlib)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
  "matplotlib>=3.7.0",
  "numpy>=1.24.0",
  "Pillow>=9.0.0",
]

[project.scripts]
visscore-generate = "visscore_synthetic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
